fixed resume redirection

--- a/bizopt/BO/templates/resumes.html
+++ b/bizopt/BO/templates/resumes.html
@@ -143,7 +143,7 @@
                             <div class="uk-divider-vertical uk-margin-medium-left uk-margin-small-right"></div>
 
                             <div class="uk-margin-small-left">
-                                <a class="uk-button uk-button-primary" href="../cardResume/{{creator.id}}">Посмотреть</a>
+                                <a class="uk-button uk-button-primary" href="../cardResume/{{creator.username}}">Посмотреть</a>
                                 <br>
                                 <h5>доступные регионы</h5>
                                 <p class="uk-text-nowrap">Москва и Московская область Ближнее Подмосковье Украина</p>
