--- a/bizopt/BO/templates/orders.html
+++ b/bizopt/BO/templates/orders.html
@@ -2,75 +2,114 @@
 {% block content %}
 
 
+<div class="placeOut uk-flex-column">
+    <h1>Корзина</h1>
+    <p>Здесь вы можете отследить статус текущих заказов</p>
+</div>
 
-   <h1>Ваши заказы</h1>
 
 
-<div class="placeOut">
-
-
+<div class="placeOut uk-flex-column uk-margin-bottom">
+    <h3>Заказы одобренные продавцом</h3>
         {% for product in products %}
-
-
-    <div class="accordion" id="accordionExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-
-                  <div class="d-flex container-fluid flex-row">
-
-                      <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">
-
-                      <h1 style="margin-left: 5%">{{ task.name }}</h1>
-
-                  </div>
-
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-          <div class="accordion-body">
-
-            <div class="progress">
-
-              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>
-
+        <div class="uk-flex uk-margin-bottom" style="background: #C4C4C4; border: 10px solid #C4C4C4">
+            <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="150" height="50" style="border-radius: 5px">
+            <div class="uk-flex-column uk-margin-medium-left uk-margin-small-bottom uk-margin-top">
+                <h3 style="margin-bottom: 10%">{{ product.id_user_buy }}</h3>
+                <p class="uk-margin-remove">Статус: {{ product.status1 }}</p>
             </div>
-
-
-
-
-            <dl class="row" style="margin-top: 2%">
-              <dt class="col-sm-3">Описание</dt>
-              <dd class="col-sm-9">{{ task.description }}</dd>
-
-              <dt class="col-sm-3">Цена</dt>
-              <dd class="col-sm-9">
-                <div class="price">
-                    {{ task.price }} ₽
-                </div>
-
-                <span class="badge rounded-pill bg-success">Оплачено</span>
-
-                <span class="badge rounded-pill bg-danger">Не оплачено</span>
-              </dd>
-
-              <dt class="col-sm-3">Контакты продавца</dt>
-              <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>
-
-
-
-            </dl>
-
-
-
-
-          </div>
+            <div class="uk-flex-column uk-margin-top" style="margin-left: auto;">
+                <h3 style="text-align: center">{{ task.price }} 12000 руб</h3>
+                <button class="uk-button" style="background: #969696; border-radius: 5px">Отменить заказ</button>
+            </div>
         </div>
-      </div>
-    </div>
-    <!-- DJANGO for end here -->
+        {% endfor %}
 
-    {% endfor %}
+    <h4>Заказы ожидающие одобренния продавца</h4>
+        {% for product in products %}
+    <div class="uk-flex uk-margin-bottom" style="background: #C4C4C4; border: 10px solid #C4C4C4">
+        <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="150" height="50" style="border-radius: 5px">
+        <div class="uk-flex-column uk-margin-medium-left uk-margin-small-bottom uk-margin-top">
+            <h3 style="margin-bottom: 10%">{{ product.id_user_buy }}</h3>
+            <div class="uk-flex uk-margin-remove" >
+                <p class="uk-margin-remove">Статус: {{ product.status1 }}</p>
+                <p class="uk-margin-remove-top uk-margin-remove-bottom  uk-margin-left">Оплата: не оплачен</p>
+            </div>
+        </div>
+        <div class="uk-flex-column uk-margin-top" style="margin-left: auto;">
+            <h3 style="text-align: center">{{ task.price }} 12000 руб</h3>
+            <button class="uk-button" style="background: #969696; border-radius: 5px;">Оплатить заказ</button>
+        </div>
+    </div>
+        {% endfor %}
+
+
+
+
+
+
+
+
+
+
+<!--    <div class="accordion" id="accordionExample">-->
+<!--      <div class="accordion-item">-->
+<!--        <h2 class="accordion-header" id="headingOne">-->
+<!--          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">-->
+
+<!--                  <div class="d-flex container-fluid flex-row">-->
+
+<!--                      <img src="https://cdn130.picsart.com/356259745047201.jpg" alt="" width="60" height="48" class="d-inline-block align-text-top">-->
+
+<!--                      <h1 style="margin-left: 5%">{{ task.name }}</h1>-->
+
+<!--                  </div>-->
+
+<!--          </button>-->
+<!--        </h2>-->
+<!--        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">-->
+<!--          <div class="accordion-body">-->
+
+<!--            <div class="progress">-->
+
+<!--              <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 100%">в работе</div>-->
+
+<!--            </div>-->
+
+
+
+
+<!--            <dl class="row" style="margin-top: 2%">-->
+<!--              <dt class="col-sm-3">Описание</dt>-->
+<!--              <dd class="col-sm-9">{{ task.description }}</dd>-->
+
+<!--              <dt class="col-sm-3">Цена</dt>-->
+<!--              <dd class="col-sm-9">-->
+<!--                <div class="price">-->
+<!--                    {{ task.price }} ₽-->
+<!--                </div>-->
+
+<!--                <span class="badge rounded-pill bg-success">Оплачено</span>-->
+
+<!--                <span class="badge rounded-pill bg-danger">Не оплачено</span>-->
+<!--              </dd>-->
+
+<!--              <dt class="col-sm-3">Контакты продавца</dt>-->
+<!--              <dd class="col-sm-9">This definition is short, so no extra paragraphs or anything.</dd>-->
+
+
+
+<!--            </dl>-->
+
+
+
+
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    &lt;!&ndash; DJANGO for end here &ndash;&gt;-->
+
 
 </div>
 
