--- a/bizopt/BO/templates/cardProduct.html
+++ b/bizopt/BO/templates/cardProduct.html
@@ -5,7 +5,7 @@
 <!-- SUB MENU -->
 <div uk-sticky="sel-target: .uk-navbar-container; cls-active: uk-navbar-sticky">
     <nav class="uk-navbar-container" uk-navbar
-        style="position: relative; z-index: 980; padding: 0 10%; background-color: #f8f8f8 !important;">
+        style="position: relative; z-index: 980; padding: 0 10%; background-color: #f8f8f8 !important; height: 4%;">
 
         <div class="uk-navbar-left">
 
@@ -99,100 +99,14 @@
 <br>
 
 
-<h1 style="text-align: center;  width: 60%; margin: auto;">Даджет / Робот мойщик окон Даджет W100, робот для мойки окон, робот стеклоочиститель</h1>
-<br>
-<br>
-<div class="uk-child-width-1-2 uk-text-center" uk-grid>
-
-    <div>
-        <div class="uk-child-width-1-2 uk-text-right" uk-grid >
-            
-            <ul class="uk-thumbnav uk-thumbnav-vertical" uk-margin style="padding: 2%;">
-                <li class="uk-active"><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" width="100" height="67" alt=""></a></li>
-                <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" width="100" height="67" alt=""></a></li>
-                <li><a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg" width="100" height="67" alt=""></a></li>
-            </ul>
-            <div class="uk-cover-container">
-                <canvas width="auto" height="auto"></canvas>
-                <img src="{{ product.picture.url }}" alt="" uk-cover>
-            </div>
-        </div>
-    </div>
-
-    <div>
-
-
-        <h2 style="text-align:initial;">200 000 руб</h2>
-
-                <div class="uk-flex">
-                    <div class="uk-width-auto">
-                        <img class="uk-border-circle" width="80" height="80" src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Gull_portrait_ca_usa.jpg">
-                    </div>
-                    <div style="padding-left: 2%;">
-                        <h3 class="uk-card-title uk-margin-remove-bottom">Дегтярев Евгений Алексеевич</h3>
-                        <div>
-                            <span>4.7</span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="uk-flex" style="margin-top: 4%;">
-                    <div class="uk-width-auto">
-                        <img class="uk-border-circle" width="40" height="40" src="https://free-png.ru/wp-content/uploads/2021/06/free-png.ru-39-700x700.png">
-                    </div>
-
-                        <p style="margin-top: auto; margin-bottom: auto; padding-left: 2%;">Провернный продавец</p>
-
-                </div>
-
-                <div class="uk-flex" style="margin-top: 4%;">
-                    <div class="uk-width-auto">
-                        <img class="uk-border-circle" width="40" height="40" src="https://www.const-foto.ru/f/delivery.png">
-                    </div>
-
-                        <p style="margin-top: auto; margin-bottom: auto; padding-left: 2%;">Доставка от поставщика</p>
-
-                </div>
-
-                
-                
-
-
-
-    </div>
-</div>
-
-
-
-<div class="uk-grid-small" uk-grid>
-    <div class="uk-width-expand" uk-leader="fill: -">Lorem ipsum dolor sit amet</div>
-    <div>$20.90</div>
-</div>
-
-
-
-
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        
-    </form>
-
-
 
 
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.13.7/dist/js/uikit-icons.min.js"></script>
 <style>
-
     .checked {
         color: orange;
     }
-
 </style>
 
 
