--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -182,25 +182,41 @@
             <h3 style="color: black">BIZOPT Partners</h3>
         </div>
 
-        <ul class="list-unstyled components">
+        <ul class="list-unstyled components uk-margin-left">
 
 
-            <li class="Btn">
-                <a href="#">Главная</a>
+            <li class="">
+                <h4>Профиль</h4>
             </li>
 
             <li class="Btn">
-                <a href="#">Настройки</a>
+                <a href="">Настройки</a>
             </li>
 
 
-
-            <li class="Btn">
-                <a href="#">Мои товары</a>
+            <li class="uk-margin-medium-top">
+                <h4>Маркетплейс</h4>
             </li>
 
             <li class="Btn">
-                <a href="#">Резюме</a>
+                <a href="">Кабинет</a>
+            </li>
+            <li class="Btn">
+                <a href="">Товар</a>
+            </li>
+
+
+            <li class="uk-margin-medium-top">
+                <h4>Платформа</h4>
+            </li>
+            <li class="Btn">
+                <a href="">Кабинет</a>
+            </li>
+            <li class="Btn">
+                <a href="">Профиль</a>
+            </li>
+            <li class="Btn">
+                <a href="">Резюме</a>
             </li>
 
         </ul>
@@ -208,7 +224,7 @@
         <ul class="list-unstyled CTAs">
 
             <li>
-                <a href="/" class="article">Обратно на главую</a>
+                <a href="" class="article">Выйти</a>
             </li>
         </ul>
     </nav>
@@ -227,23 +243,23 @@
 
 
 <script type="text/javascript">
-    $(function () {
-        var num = window.location.search[1];
-        if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
-            // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
-            num = num; //here is a number of page
-        } else {
-            num = "1";
-        }
-
-        var xhr = new XMLHttpRequest()
-        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
-        xhr.onload = function () {
-            $('#MainWindowContainer').html(xhr.response)
-        }
-        xhr.send()
-
-    });
+    // $(function () {
+    //     var num = window.location.search[1];
+    //     if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
+    //         // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
+    //         num = num; //here is a number of page
+    //     } else {
+    //         num = "1";
+    //     }
+    //
+    //     var xhr = new XMLHttpRequest()
+    //     xhr.open('GET', `becomeCreatorTemplates/${num}/`)
+    //     xhr.onload = function () {
+    //         $('#MainWindowContainer').html(xhr.response)
+    //     }
+    //     xhr.send()
+    //
+    // });
 
     $('.Btn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
@@ -281,6 +297,10 @@
         color: #999;
     }
 
+    li a {
+        margin-top: 0;
+        padding: 0;
+    }
     a,
     a:hover,
     a:focus {
@@ -354,7 +374,7 @@
     }
 
     #sidebar ul li a {
-        padding: 10px;
+        padding: 5px;
         font-size: 1.1em;
         display: block;
     }
