--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -243,23 +243,23 @@
 
 
 <script type="text/javascript">
-    // $(function () {
-    //     var num = window.location.search[1];
-    //     if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
-    //         // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
-    //         num = num; //here is a number of page
-    //     } else {
-    //         num = "1";
-    //     }
-    //
-    //     var xhr = new XMLHttpRequest()
-    //     xhr.open('GET', `becomeCreatorTemplates/${num}/`)
-    //     xhr.onload = function () {
-    //         $('#MainWindowContainer').html(xhr.response)
-    //     }
-    //     xhr.send()
-    //
-    // });
+    $(function () {
+        var num = window.location.search[1];
+        if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
+            // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
+            num = num; //here is a number of page
+        } else {
+            num = "1";
+        }
+
+        var xhr = new XMLHttpRequest()
+        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
+        xhr.onload = function () {
+            $('#MainWindowContainer').html(xhr.response)
+        }
+        xhr.send()
+
+    });
 
     $('.Btn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
