add statuses for Заказы в работе

--- a/bizopt/BO/templates/baseProductCard.html
+++ b/bizopt/BO/templates/baseProductCard.html
@@ -5,7 +5,7 @@
         <img src="https://justnike.ru/image/cache/data/Nike%20M2K%20Tekno/80731_Shoes%20(146)-1200x748-700x500.jpg" width="250px" height="90px" style="margin: 2% 5% 2% 2%; border-radius: 2em">
         <div class="uk-flex uk-flex-column">
             <div class="uk-flex">
-                <h3 style="font-weight: bold" class="uk-margin-large-right">Кроссовки</h3>
+                <h3 style="font-weight: bold" class="uk-margin-large-right">{{ product.product_name }}</h3>
                 <p class="" style="margin-left: 23%; margin-top: 0">Продавец</p>
             </div>
             <div class="uk-flex-inline">
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="uk-flex textBigInfo" style="margin-left: 12%">
-                    <span style="margin-right: 2%">2000</span>
+                    <span style="margin-right: 2%">{{ product.cost }}</span>
                     <span>руб</span>
                 </div>
             </div>
