--- a/bizopt/BO/templates/becomeCreatorTemplates/template1.html
+++ b/bizopt/BO/templates/becomeCreatorTemplates/template1.html
@@ -6,43 +6,46 @@
 </div>
 <div class="center">
 
-    <div class="col-sm-9 scrollspy-example" style="margin: auto">
-        <div class="container">
-            <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
-                <thead>
-                    <tr>
-                        <th class="col-xs-3">ID</th>
-                        <th class="col-xs-3">Название задачи</th>
-                        <th class="col-xs-3">Кол-во шт товара</th>
-                        <th class="col-xs-3">Заказчик</th>
-                        <th class="col-xs-3">Дедлайн</th>
-                        <th class="col-xs-6">Статус</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for product in products %}
-                    <tr>
-                        <td class="col-xs-3">{{ product.id }}</td>
-                        <td class="col-xs-3">{{ product.product_name }}</td>
-                        <td class="col-xs-6">1</td>
-                        <td class="col-xs-3">{{ product.customer }}</td>
-                        <td class="col-xs-3">2021-05-23</td>
-                        <th class="col-xs-6">
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>{{ product.status2 }}</option>
-                                <option value="1">В работе</option>
-                                <option value="3">Сделано</option>
-                            </select>
-                        </th>
+    <form method="POST" id="products_in_work_id" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="col-sm-9 scrollspy-example" style="margin: auto">
+            <div class="container">
+                <table class="table table-fixed col-sm-9 scrollspy-example" data-spy="scroll" data-target="#spy">
+                    <thead>
+                        <tr>
+                            <th class="col-xs-3">ID</th>
+                            <th class="col-xs-3">Название задачи</th>
+                            <th class="col-xs-3">Кол-во шт товара</th>
+                            <th class="col-xs-3">Заказчик</th>
+                            <th class="col-xs-3">Дедлайн</th>
+                            <th class="col-xs-6">Статус</th>
+                        </tr>
+                    </thead>
 
-
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                    <tbody>
+                        {% for product in products %}
+                        <tr>
+                            <td class="col-xs-3">{{ product.id }}</td>
+                            <td class="col-xs-3">{{ product.product_name }}</td>
+                            <td class="col-xs-6">1</td>
+                            <td class="col-xs-3">{{ product.customer }}</td>
+                            <td class="col-xs-3">2021-05-23</td>
+                            <th class="col-xs-6">
+                                <select name="services" id="services" class="form-select" aria-label="Default select example">
+                                    <option {% if product.status2 == 'in_process' %}selected{% endif %} value="1">В работе</option>
+                                    <option {% if product.status2 == 'done' %}selected{% endif %} value="2">Сделано</option>
+                                    <option {% if product.status2 == 'awaiting_payment' %}selected{% endif %} value="3">Ожидает оплаты</option>
+                                    <option {% if product.status2 == 'end_partner_late' %}selected{% endif %} value="4">Отказ</option>
+                                </select>
+                            </th>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
-    <button type="button" class="btn btn-secondary button button">Сохранить</button>
+        <button name="products_in_work" type="submit" class="btn btn-secondary button button">Сохранить</button>
+    </form>
 
     <div class="d-flex flex-row" style="margin-top: 20px">
 
@@ -97,9 +100,7 @@
                         </thead>
 
                         <form method="GET" id="goodsList" enctype="multipart/form-data">
-
                             <tbody>
-
                                 {% for product in products_v %}
                                 <tr>
                                     <td class="col-xs-3">{{ product.id }}</td>
@@ -109,9 +110,7 @@
                                         <button name="status" form="goodsList" type="submit" value={{product.id}} class="btn btn-outline-secondary">Согласиться</button>
                                     </td>
                                 </tr>
-
                                 {% endfor %}
-
                             </tbody>
                         </form>
                     </table>
