--- a/bizopt/BO/templates/addTask.html
+++ b/bizopt/BO/templates/addTask.html
@@ -31,8 +31,8 @@
 
                 <label>Ключевые слова</label>
                 <div class="input-group mt-2 mb-2">
-                    <input type="text" id="keyValue" class="form-control">
-                    <button class="btn btn-outline-secondary" id="btnAddkey" onclick="addKey(this)" type="button"><i class="fa fa-plus"></i></button>
+                    <input type="text" value="-" name="tag" id="keyValue" class="form-control">
+                    <button name="tag" type="submit" class="btn btn-outline-secondary" id="btnAddkey" onclick="addKey(this)" ><i class="fa fa-plus"></i></button>
                     <br>
                 </div>
 
@@ -57,7 +57,7 @@
                             </div>
                         </div>
                         <div>
-                            <button style="width: 100%; border-radius: 5px; background: #C4C4C4; " type="submit" id="submit_button" disabled>Опубликовать</button>
+                            <button style="width: 100%; border-radius: 5px; background: #C4C4C4; " type="submit" name="addtask" id="submit_button" disabled>Опубликовать</button>
                         </div>
                     </div>
             </form>
