--- a/bizopt/BO/templates/index.html
+++ b/bizopt/BO/templates/index.html
@@ -10,6 +10,9 @@
 
             <ul class="uk-navbar-nav">
                 <li class="uk-active">
+                    {% if tag %}
+                    <h2>Posts tagged with "{{ tag.name }}"</h2>
+                    {% endif %}
                     {% for item in submenu %}
                     {% if item.xpos == 'left' and item.position == 'out' %}
                     <a href="{{item.link}}">{{item.text}}</a>
@@ -18,6 +21,16 @@
                     <div class="uk-navbar-dropdown uk-navbar-dropdown-width-4">
                         <div class="uk-navbar-dropdown-grid uk-child-width-1-5" uk-grid>
                             <div>
+                                <ul class="uk-nav uk-navbar-dropdown-nav">
+                                    {% for tag in post.tags.all %}
+                                    <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+                                        {{ tag.name }}
+                                    </a>
+                                    {% if not forloop.last %}, {% endif %}
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <!-- <div>
                                 <ul class="uk-nav uk-navbar-dropdown-nav">
                                     {% for item in submenu %}
                                     {% if item.xpos == 'left' and item.position == 'in' and item.link == "1" %}
@@ -61,7 +74,7 @@
                                     {% endif %}
                                     {% endfor %}
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </li>
