--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -182,41 +182,25 @@
             <h3 style="color: black">BIZOPT Partners</h3>
         </div>
 
-        <ul class="list-unstyled components uk-margin-left">
+        <ul class="list-unstyled components">
 
 
-            <li class="">
-                <h4>Профиль</h4>
+            <li class="Btn">
+                <a href="#">Главная</a>
             </li>
 
             <li class="Btn">
-                <a href="">Настройки</a>
+                <a href="#">Настройки</a>
             </li>
 
 
-            <li class="uk-margin-medium-top">
-                <h4>Маркетплейс</h4>
+
+            <li class="Btn">
+                <a href="#">Мои товары</a>
             </li>
 
             <li class="Btn">
-                <a href="">Кабинет</a>
-            </li>
-            <li class="Btn">
-                <a href="">Товар</a>
-            </li>
-
-
-            <li class="uk-margin-medium-top">
-                <h4>Платформа</h4>
-            </li>
-            <li class="Btn">
-                <a href="">Кабинет</a>
-            </li>
-            <li class="Btn">
-                <a href="">Профиль</a>
-            </li>
-            <li class="Btn">
-                <a href="">Резюме</a>
+                <a href="#">Резюме</a>
             </li>
 
         </ul>
@@ -224,7 +208,7 @@
         <ul class="list-unstyled CTAs">
 
             <li>
-                <a href="" class="article">Выйти</a>
+                <a href="/" class="article">Обратно на главую</a>
             </li>
         </ul>
     </nav>
@@ -297,10 +281,6 @@
         color: #999;
     }
 
-    li a {
-        margin-top: 0;
-        padding: 0;
-    }
     a,
     a:hover,
     a:focus {
@@ -374,7 +354,7 @@
     }
 
     #sidebar ul li a {
-        padding: 5px;
+        padding: 10px;
         font-size: 1.1em;
         display: block;
     }
