--- a/bizopt/BO/templates/becomeCreator.html
+++ b/bizopt/BO/templates/becomeCreator.html
@@ -185,46 +185,38 @@
         <ul class="list-unstyled components uk-margin-left">
 
 
-            <li class="">
+
+            <li class="Btn">
                 <h4>Профиль</h4>
+                <a href="#">Настройки</a>
             </li>
 
-            <li class="Btn">
-                <a href="">Настройки</a>
-            </li>
-
-
-            <li class="uk-margin-medium-top">
+            <li class="Btn uk-margin-medium-top">
                 <h4>Маркетплейс</h4>
+                <a href="#">Кабинет</a>
             </li>
 
             <li class="Btn">
-                <a href="">Кабинет</a>
+                <a href="#">Товар</a>
             </li>
             <li class="Btn">
-                <a href="">Товар</a>
+                <a href="#">Резюме</a>
             </li>
 
-
-            <li class="uk-margin-medium-top">
+            <!-- <li class="Btn uk-margin-medium-top">
                 <h4>Платформа</h4>
+                <a href="#">Кабинет</a>
             </li>
             <li class="Btn">
-                <a href="">Кабинет</a>
-            </li>
-            <li class="Btn">
-                <a href="">Профиль</a>
-            </li>
-            <li class="Btn">
-                <a href="">Резюме</a>
-            </li>
+                <a href="#">Профиль</a>
+            </li> -->
 
         </ul>
 
         <ul class="list-unstyled CTAs">
 
             <li>
-                <a href="" class="article">Выйти</a>
+                <a href="#" class="article">Выйти</a>
             </li>
         </ul>
     </nav>
@@ -243,37 +235,26 @@
 
 
 <script type="text/javascript">
-    // $(function () {
-    //     var num = window.location.search[1];
-    //     if ($.isNumeric(num) && ![0, 2, 5, 8, 9].indexOf(num)){
-    //         // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
-    //         num = num; //here is a number of page
-    //     } else {
-    //         num = "1";
-    //     }
-    //
-    //     var xhr = new XMLHttpRequest()
-    //     xhr.open('GET', `becomeCreatorTemplates/${num}/`)
-    //     xhr.onload = function () {
-    //         $('#MainWindowContainer').html(xhr.response)
-    //     }
-    //     xhr.send()
-    //
-    // });
-
-    $('.Btn').on('click', {}, function (inBody) {
+    $(function () {
+        var num = window.location.search[1];
+        if ($.isNumeric(num) && [0, 5, 8, 9].indexOf(num) == -1){
+            // если у вас не работает страница с номером темплейта, как в массиве, просто удалите его из массива
+            num = num; //here is a number of page
+        } else {
+            num = 1;
+        }
         var xhr = new XMLHttpRequest()
-        var index = $(this).index() + 1
-        xhr.open('GET', `becomeCreatorTemplates/${index}/`)
+        xhr.open('GET', `becomeCreatorTemplates/${num}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
         }
         xhr.send()
+    
     });
 
-    $('.ExtBtn').on('click', {}, function (inBody) {
+    $('.Btn').on('click', {}, function (inBody) {
         var xhr = new XMLHttpRequest()
-        var index = $(this).index() + 11
+        var index = $(this).index() + 1
         xhr.open('GET', `becomeCreatorTemplates/${index}/`)
         xhr.onload = function () {
             $('#MainWindowContainer').html(xhr.response)
